src/snapshots/pepper__tests__parser_tests@tests_parser_function_signatures_one_param.pr.snap
---
source: src/lib.rs
description: func one_param(a Int32) = ()
expression: ast.unwrap()
input_file: tests/parser/function_signatures/one_param.pr
snapshot_kind: text
---
- Function:
    name: one_param
    generics: ~
    params:
      - name: a
        ty:
          Primitive:
            name:
              base: Int32
              segments: []
            generics: ~
    return_ty: ~
    body:
      Tuple: []
