src/snapshots/pepper__tests__parser_tests@tests_parser_submodules_complex_other_submod_mod.pr.snap
---
source: src/lib.rs
description: func function_in_other_submod() = ()
expression: ast.unwrap()
input_file: tests/parser/submodules/complex/other_submod/mod.pr
snapshot_kind: text
---
- Function:
    name: function_in_other_submod
    params: []
    return_ty: ~
    body:
      Tuple: []
