src/snapshots/pepper__tests__parser_tests@tests_parser_types_lots_of_enum_variants.pr.snap
---
source: src/lib.rs
description: "enum LotsOfEnumVariants {\n    A,\n    B,\n    C,\n    D,\n    E,\n    F,\n    G,\n    H,\n    I,\n    J,\n    K,\n    L,\n    M,\n    N,\n    O,\n    P,\n    Q,\n    R,\n    S,\n    T,\n    U,\n    V,\n    W,\n    X,\n    Y,\n    Z,\n    AA,\n    BB,\n    CC,\n    DD,\n    EE,\n    FF,\n    GG,\n    HH,\n    II,\n    JJ,\n    KK,\n    LL,\n    MM,\n    NN,\n    OO,\n    PP,\n    QQ,\n    RR,\n    SS,\n    TT,\n    UU,\n    VV,\n    WW,\n    XX,\n    YY,\n    ZZ,\n    AAA,\n    BBB,\n    CCC,\n    DDD,\n    EEE,\n    FFF,\n    GGG,\n    HHH,\n    III,\n    JJJ,\n    KKK,\n    LLL,\n    MMM,\n    NNN,\n    OOO,\n    PPP,\n    QQQ,\n    RRR,\n    SSS,\n    TTT,\n    UUU,\n    VVV,\n    WWW,\n    XXX,\n    YYY,\n    ZZZ,\n    AAAA,\n    BBBB,\n    CCCC,\n    DDDD,\n    EEEE,\n    FFFF,\n    GGGG,\n    HHHH,\n    IIII,\n    JJJJ,\n    KKKK,\n    LLLL,\n    MMMM,\n    NNNN,\n    OOOO,\n    PPPP,\n    QQQQ,\n    RRRR,\n    SSSS,\n    TTTT,\n    UUUU,\n    VVVV,\n    WWWW,\n    XXXX,\n    YYYY,\n    ZZZZ,\n    AAAAA,\n    BBBBB,\n    CCCCC,\n    DDDDD,\n    EEEEE,\n    FFFFF,\n    GGGGG,\n    HHHHH,\n    IIIII,\n    JJJJJ,\n    KKKKK,\n    LLLLL,\n    MMMMM,\n    NNNNN,\n    OOOOO,\n    PPPPP,\n    QQQQQ,\n    RRRRR,\n    SSSSS,\n    TTTTT,\n    UUUUU,\n    VVVVV,\n    WWWWW,\n    XXXXX,\n    YYYYY,\n    ZZZZZ,\n    AAAAAA,\n    BBBBBB,\n    CCCCCC,\n    DDDDDD,\n    EEEEEE,\n    FFFFFF,\n    GGGGGG,\n    HHHHHH,\n    IIIIII,\n    JJJJJJ,\n    KKKKKK,\n    LLLLLL,\n    MMMMMM,\n    NNNNNN,\n    OOOOOO,\n    PPPPPP,\n    QQQQQQ,\n    RRRRRR,\n    SSSSSS,\n    TTTTTT,\n    UUUUUU,\n    VVVVVV,\n    WWWWWW,\n    XXXXXX,\n    YYYYYY,\n    ZZZZZZ,\n    AAAAAAA,\n    BBBBBBB,\n    CCCCCCC,\n    DDDDDDD,\n    EEEEEEE,\n    FFFFFFF,\n    GGGGGGG,\n    HHHHHHH,\n    IIIIIII,\n    JJJJJJJ,\n    KKKKKKK,\n    LLLLLLL,\n    MMMMMMM,\n    NNNNNNN,\n    OOOOOOO,\n    PPPPPPP,\n    QQQQQQQ,\n    RRRRRRR,\n    SSSSSSS,\n    TTTTTTT,\n    UUUUUUU,\n    VVVVVVV,\n    WWWWWWW,\n    XXXXXXX,\n    YYYYYYY,\n    ZZZZZZZ,\n    AAAAAAAA,\n    BBBBBBBB,\n    CCCCCCCC,\n    DDDDDDDD,\n    EEEEEEEE,\n    FFFFFFFF,\n    GGGGGGGG,\n    HHHHHHHH,\n    IIIIIIII,\n    JJJJJJJJ,\n    KKKKKKKK,\n    LLLLLLLL,\n    MMMMMMMM,\n    NNNNNNNN,\n    OOOOOOOO,\n    PPPPPPPP,\n    QQQQQQQQ,\n    RRRRRRRR,\n    SSSSSSSS,\n    TTTTTTTT,\n    UUUUUUUU,\n    VVVVVVVV,\n    WWWWWWWW,\n    XXXXXXXX,\n    YYYYYYYY,\n    ZZZZZZZZ,\n    AAAAAAAAA,\n    BBBBBBBBB,\n    CCCCCCCCC,\n    DDDDDDDDD,\n    EEEEEEEEE,\n    FFFFFFFFF,\n    GGGGGGGGG,\n    HHHHHHHHH,\n    IIIIIIIII,\n    JJJJJJJJJ,\n    KKKKKKKKK,\n    LLLLLLLLL,\n    MMMMMMMMM,\n    NNNNNNNNN,\n    OOOOOOOOO,\n    PPPPPPPPP,\n    QQQQQQQQQ,\n    RRRRRRRRR,\n    SSSSSSSSS,\n    TTTTTTTTT,\n    UUUUUUUUU,\n    VVVVVVVVV,\n    WWWWWWWWW,\n    XXXXXXXXX,\n    YYYYYYYYY,\n    ZZZZZZZZZ,\n    AAAAAAAAAA,\n    BBBBBBBBBB,\n    CCCCCCCCCC,\n    DDDDDDDDDD,\n    EEEEEEEEEE,\n    FFFFFFFFFF,\n    GGGGGGGGGG,\n    HHHHHHHHHH,\n    IIIIIIIIII,\n    JJJJJJJJJJ,\n    KKKKKKKKKK,\n    LLLLLLLLLL,\n    MMMMMMMMMM,\n    NNNNNNNNNN,\n    OOOOOOOOOO,\n    PPPPPPPPPP,\n    QQQQQQQQQQ,\n    RRRRRRRRRR,\n    SSSSSSSSSS,\n    TTTTTTTTTT,\n    UUUUUUUUUU,\n    VVVVVVVVVV,\n    WWWWWWWWWW,\n    XXXXXXXXXX,\n    YYYYYYYYYY,\n    ZZZZZZZZZZ,\n}"
expression: ast.unwrap()
input_file: tests/parser/types/lots_of_enum_variants.pr
snapshot_kind: text
---
- Enum:
    name: LotsOfEnumVariants
    variants:
      - Unit: A
      - Unit: B
      - Unit: C
      - Unit: D
      - Unit: E
      - Unit: F
      - Unit: G
      - Unit: H
      - Unit: I
      - Unit: J
      - Unit: K
      - Unit: L
      - Unit: M
      - Unit: N
      - Unit: O
      - Unit: P
      - Unit: Q
      - Unit: R
      - Unit: S
      - Unit: T
      - Unit: U
      - Unit: V
      - Unit: W
      - Unit: X
      - Unit: Y
      - Unit: Z
      - Unit: AA
      - Unit: BB
      - Unit: CC
      - Unit: DD
      - Unit: EE
      - Unit: FF
      - Unit: GG
      - Unit: HH
      - Unit: II
      - Unit: JJ
      - Unit: KK
      - Unit: LL
      - Unit: MM
      - Unit: NN
      - Unit: OO
      - Unit: PP
      - Unit: QQ
      - Unit: RR
      - Unit: SS
      - Unit: TT
      - Unit: UU
      - Unit: VV
      - Unit: WW
      - Unit: XX
      - Unit: YY
      - Unit: ZZ
      - Unit: AAA
      - Unit: BBB
      - Unit: CCC
      - Unit: DDD
      - Unit: EEE
      - Unit: FFF
      - Unit: GGG
      - Unit: HHH
      - Unit: III
      - Unit: JJJ
      - Unit: KKK
      - Unit: LLL
      - Unit: MMM
      - Unit: NNN
      - Unit: OOO
      - Unit: PPP
      - Unit: QQQ
      - Unit: RRR
      - Unit: SSS
      - Unit: TTT
      - Unit: UUU
      - Unit: VVV
      - Unit: WWW
      - Unit: XXX
      - Unit: YYY
      - Unit: ZZZ
      - Unit: AAAA
      - Unit: BBBB
      - Unit: CCCC
      - Unit: DDDD
      - Unit: EEEE
      - Unit: FFFF
      - Unit: GGGG
      - Unit: HHHH
      - Unit: IIII
      - Unit: JJJJ
      - Unit: KKKK
      - Unit: LLLL
      - Unit: MMMM
      - Unit: NNNN
      - Unit: OOOO
      - Unit: PPPP
      - Unit: QQQQ
      - Unit: RRRR
      - Unit: SSSS
      - Unit: TTTT
      - Unit: UUUU
      - Unit: VVVV
      - Unit: WWWW
      - Unit: XXXX
      - Unit: YYYY
      - Unit: ZZZZ
      - Unit: AAAAA
      - Unit: BBBBB
      - Unit: CCCCC
      - Unit: DDDDD
      - Unit: EEEEE
      - Unit: FFFFF
      - Unit: GGGGG
      - Unit: HHHHH
      - Unit: IIIII
      - Unit: JJJJJ
      - Unit: KKKKK
      - Unit: LLLLL
      - Unit: MMMMM
      - Unit: NNNNN
      - Unit: OOOOO
      - Unit: PPPPP
      - Unit: QQQQQ
      - Unit: RRRRR
      - Unit: SSSSS
      - Unit: TTTTT
      - Unit: UUUUU
      - Unit: VVVVV
      - Unit: WWWWW
      - Unit: XXXXX
      - Unit: YYYYY
      - Unit: ZZZZZ
      - Unit: AAAAAA
      - Unit: BBBBBB
      - Unit: CCCCCC
      - Unit: DDDDDD
      - Unit: EEEEEE
      - Unit: FFFFFF
      - Unit: GGGGGG
      - Unit: HHHHHH
      - Unit: IIIIII
      - Unit: JJJJJJ
      - Unit: KKKKKK
      - Unit: LLLLLL
      - Unit: MMMMMM
      - Unit: NNNNNN
      - Unit: OOOOOO
      - Unit: PPPPPP
      - Unit: QQQQQQ
      - Unit: RRRRRR
      - Unit: SSSSSS
      - Unit: TTTTTT
      - Unit: UUUUUU
      - Unit: VVVVVV
      - Unit: WWWWWW
      - Unit: XXXXXX
      - Unit: YYYYYY
      - Unit: ZZZZZZ
      - Unit: AAAAAAA
      - Unit: BBBBBBB
      - Unit: CCCCCCC
      - Unit: DDDDDDD
      - Unit: EEEEEEE
      - Unit: FFFFFFF
      - Unit: GGGGGGG
      - Unit: HHHHHHH
      - Unit: IIIIIII
      - Unit: JJJJJJJ
      - Unit: KKKKKKK
      - Unit: LLLLLLL
      - Unit: MMMMMMM
      - Unit: NNNNNNN
      - Unit: OOOOOOO
      - Unit: PPPPPPP
      - Unit: QQQQQQQ
      - Unit: RRRRRRR
      - Unit: SSSSSSS
      - Unit: TTTTTTT
      - Unit: UUUUUUU
      - Unit: VVVVVVV
      - Unit: WWWWWWW
      - Unit: XXXXXXX
      - Unit: YYYYYYY
      - Unit: ZZZZZZZ
      - Unit: AAAAAAAA
      - Unit: BBBBBBBB
      - Unit: CCCCCCCC
      - Unit: DDDDDDDD
      - Unit: EEEEEEEE
      - Unit: FFFFFFFF
      - Unit: GGGGGGGG
      - Unit: HHHHHHHH
      - Unit: IIIIIIII
      - Unit: JJJJJJJJ
      - Unit: KKKKKKKK
      - Unit: LLLLLLLL
      - Unit: MMMMMMMM
      - Unit: NNNNNNNN
      - Unit: OOOOOOOO
      - Unit: PPPPPPPP
      - Unit: QQQQQQQQ
      - Unit: RRRRRRRR
      - Unit: SSSSSSSS
      - Unit: TTTTTTTT
      - Unit: UUUUUUUU
      - Unit: VVVVVVVV
      - Unit: WWWWWWWW
      - Unit: XXXXXXXX
      - Unit: YYYYYYYY
      - Unit: ZZZZZZZZ
      - Unit: AAAAAAAAA
      - Unit: BBBBBBBBB
      - Unit: CCCCCCCCC
      - Unit: DDDDDDDDD
      - Unit: EEEEEEEEE
      - Unit: FFFFFFFFF
      - Unit: GGGGGGGGG
      - Unit: HHHHHHHHH
      - Unit: IIIIIIIII
      - Unit: JJJJJJJJJ
      - Unit: KKKKKKKKK
      - Unit: LLLLLLLLL
      - Unit: MMMMMMMMM
      - Unit: NNNNNNNNN
      - Unit: OOOOOOOOO
      - Unit: PPPPPPPPP
      - Unit: QQQQQQQQQ
      - Unit: RRRRRRRRR
      - Unit: SSSSSSSSS
      - Unit: TTTTTTTTT
      - Unit: UUUUUUUUU
      - Unit: VVVVVVVVV
      - Unit: WWWWWWWWW
      - Unit: XXXXXXXXX
      - Unit: YYYYYYYYY
      - Unit: ZZZZZZZZZ
      - Unit: AAAAAAAAAA
      - Unit: BBBBBBBBBB
      - Unit: CCCCCCCCCC
      - Unit: DDDDDDDDDD
      - Unit: EEEEEEEEEE
      - Unit: FFFFFFFFFF
      - Unit: GGGGGGGGGG
      - Unit: HHHHHHHHHH
      - Unit: IIIIIIIIII
      - Unit: JJJJJJJJJJ
      - Unit: KKKKKKKKKK
      - Unit: LLLLLLLLLL
      - Unit: MMMMMMMMMM
      - Unit: NNNNNNNNNN
      - Unit: OOOOOOOOOO
      - Unit: PPPPPPPPPP
      - Unit: QQQQQQQQQQ
      - Unit: RRRRRRRRRR
      - Unit: SSSSSSSSSS
      - Unit: TTTTTTTTTT
      - Unit: UUUUUUUUUU
      - Unit: VVVVVVVVVV
      - Unit: WWWWWWWWWW
      - Unit: XXXXXXXXXX
      - Unit: YYYYYYYYYY
      - Unit: ZZZZZZZZZZ
