src/snapshots/pepper__tests__parser_tests@tests_parser_types_simple_enum.pr.snap
---
source: src/lib.rs
description: "enum SimpleEnum =\n    | A\n    | B\n    | C"
expression: ast.unwrap()
input_file: tests/parser/types/simple_enum.pr
snapshot_kind: text
---
- Enum:
    name: SimpleEnum
    generics: ~
    variants:
      - Unit: A
      - Unit: B
      - Unit: C
